add modal.js, animations

--- a/portfolio.html
+++ b/portfolio.html
@@ -87,13 +87,22 @@
           <ul class="portfolio-cards-list list">
             <li class="portfolio-cards-item">
               <a href="" class="portfolio-link">
-                <img
-                  class="portfolio-cards"
-                  src="./images/tehno.jpg"
-                  alt="Відкритий ноутбук з фото"
-                  width="370"
-                  height="294"
-                />
+                <div class="box">
+                  <img
+                    class="portfolio-cards"
+                    src="./images/tehno.jpg"
+                    alt="Відкритий ноутбук з фото"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="box-content">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-content">
                   <h2 class="portfolio-cards-title">Технокряк</h2>
                   <p class="portfolio-cards-text">Веб-сайт</p>
@@ -103,13 +112,22 @@
 
             <li class="portfolio-cards-item">
               <a href="" class="portfolio-link">
-                <img
+                <div class="box">
+                  <img
                   class="portfolio-cards"
                   src="./images/poster.jpg"
                   alt="Постер з двома  баскетболістами"
                   width="370"
                   height="294"
                 />
+                  <div class="overlay">
+                    <p class="box-content">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-content">
                   <h2 class="portfolio-cards-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -121,6 +139,7 @@
 
             <li class="portfolio-cards-item">
               <a href="" class="portfolio-link">
+                <div class="box">
                 <img
                   class="portfolio-cards"
                   src="./images/seafood.jpg"
@@ -128,6 +147,14 @@
                   width="370"
                   height="294"
                 />
+                  <div class="overlay">
+                    <p class="box-content">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-content">
                   <h2 class="portfolio-cards-title">Ресторан Seafood</h2>
                   <p class="portfolio-cards-text">Додаток</p>
@@ -137,6 +164,7 @@
 
             <li class="portfolio-cards-item">
               <a href="" class="portfolio-link">
+                <div class="box">
                 <img
                   class="portfolio-cards"
                   src="./images/project_prime.jpg"
@@ -144,6 +172,14 @@
                   width="370"
                   height="294"
                 />
+                  <div class="overlay">
+                    <p class="box-content">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-content">
                   <h2 class="portfolio-cards-title">Проєкт <span lang="en">Prime</span></h2>
                   <p class="portfolio-cards-text">Маркетинг</p>
@@ -153,6 +189,7 @@
 
             <li class="portfolio-cards-item">
               <a href="" class="portfolio-link">
+                <div class="box">
                 <img
                   class="portfolio-cards"
                   src="./images/project_boxes.jpg"
@@ -160,6 +197,14 @@
                   width="370"
                   height="294"
                 />
+                  <div class="overlay">
+                    <p class="box-content">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-content">
                   <h2 class="portfolio-cards-title">Проєкт <span lang="en">Boxes</span></h2>
                   <p class="portfolio-cards-text">Додаток</p>
@@ -169,6 +214,7 @@
 
             <li class="portfolio-cards-item">
               <a href="" class="portfolio-link">
+                <div class="box">
                 <img
                   class="portfolio-cards"
                   src="./images/inspiration_has_no_borders.jpg"
@@ -176,6 +222,14 @@
                   width="370"
                   height="294"
                 />
+                  <div class="overlay">
+                    <p class="box-content">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-content">
                   <h2 class="portfolio-cards-title" lang="en">Inspiration has no Borders</h2>
                   <p class="portfolio-cards-text">Веб-сайт</p>
@@ -185,13 +239,22 @@
 
             <li class="portfolio-cards-item">
               <a href="" class="portfolio-link">
-                <img
+                <div class="box">
+                  <img
                   class="portfolio-cards"
                   src="./images/limited_edition.jpg"
                   alt="Відкритий журнал"
                   width="370"
                   height="294"
                 />
+                  <div class="overlay">
+                    <p class="box-content">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-content">
                   <h2 class="portfolio-cards-title">
                     Видання<span lang="en">Limited Edition</span>
@@ -203,13 +266,22 @@
 
             <li class="portfolio-cards-item">
               <a href="" class="portfolio-link">
-                <img
+                <div class="box">
+                  <img
                   class="portfolio-cards"
                   src="./images/project_lab.jpg"
                   alt="Лейбл"
                   width="370"
                   height="294"
                 />
+                  <div class="overlay">
+                    <p class="box-content">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-content">
                   <h2 class="portfolio-cards-title">Проєкт <span lang="en">LAB</span></h2>
                   <p class="portfolio-cards-text">Маркетинг</p>
@@ -219,13 +291,22 @@
 
             <li class="portfolio-cards-item">
               <a href="" class="portfolio-link">
-                <img
+                <div class="box">
+                  <img
                   class="portfolio-cards"
                   src="./images/growing_business.jpg"
                   alt="Відкритий ноутбук для роботи"
                   width="370"
                   height="294"
                 />
+                  <div class="overlay">
+                    <p class="box-content">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-content">
                   <h2 class="portfolio-cards-title" lang="en">Growing Business</h2>
                   <p class="portfolio-cards-text">Додаток</p>
