--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <section class="hero section">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="hero-btn btn" type="button">Замовити послугу</button>
+          <button class="hero-btn btn" type="button" data-modal-open>Замовити послугу</button>
         </div>
       </section>
       <!-------------------------------Features--------------------------------------->
@@ -136,6 +136,7 @@
                 width="370"
                 height="294"
               />
+              <p class="label">Десктопні додатки</p>
             </li>
 
             <li class="gallery-item">
@@ -146,6 +147,7 @@
                 width="370"
                 height="294"
               />
+              <p class="label">Мобільні додатки</p>
             </li>
 
             <li class="gallery-item">
@@ -156,6 +158,7 @@
                 width="370"
                 height="294"
               />
+              <p class="label">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
@@ -459,6 +462,15 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop"></div>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-btn" type="button" data-modal-close>
+          <svg class="icon-close" width="18" height="18">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
